finalise execution of JAVAFX application on Mac OS/Unix. Refactoring of BE structure. Implement NGROK based backend publishing for demo